--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,56 +3,29 @@ name: Deploy Docusaurus to GitHub Pages
 on:
   push:
     branches:
-      - main
-    paths:
-      - docs/**
-      - .github/workflows/deploy.yml
+      - main  # Trigger deployment on push to main branch
 
 jobs:
-  build:
-    name: Build Docusaurus Site
+  deploy:
     runs-on: ubuntu-latest
-
     steps:
-      # 1. Checkout the repository
-      - name: Checkout Repository
+      - name: Checkout code
         uses: actions/checkout@v4
 
-      # 2. Setup Node.js
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 18
-          cache: 'npm'
-          cache-dependency-path: 'docs/package-lock.json'
+          node-version: 20
 
-      # 3. Install dependencies
-      - name: Install Dependencies
+      - name: Install dependencies
         run: npm ci
-        working-directory: docs
 
-      # 4. Build the website
-      - name: Build Docusaurus
+      - name: Build website
         run: npm run build
-        working-directory: docs
 
-      # 5. Upload the build to GitHub Pages artifact
-      - name: Upload Build Artifact
-        uses: actions/upload-pages-artifact@v3
-        with:
-          path: docs/build
-
-  deploy:
-    name: Deploy to GitHub Pages
-    runs-on: ubuntu-latest
-    needs: build
-    permissions:
-      pages: write
-      id-token: write
-
-    environment:
-      name: github-pages
-
-    steps:
       - name: Deploy to GitHub Pages
-        uses: actions/deploy-pages@v4
+        uses: peaceiris/actions-gh-pages@v4
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./build
+          publish_branch: gh-pages
