--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,14 +18,16 @@ jobs:
           node-version: 20
 
       - name: Install dependencies
-        run: npm install
+        run: npm ci
+        working-directory: ./docs  # 👈 go into docs folder
 
       - name: Build website
         run: npm run build
+        working-directory: ./docs  # 👈 build from docs folder
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./build
+          publish_dir: ./docs/build   # 👈 build output lives here
           publish_branch: gh-pages
