mudanca de nomes de arquivos e funcoes - funcoes novas add

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 # NÃO subir a pasta de dados
+Projeto/data
 data/
 
 # NÃO subir ambiente virtual
@@ -14,3 +15,6 @@ __pycache__/
 
 # Arquivos do sistema
 .DS_Store
+
+#arquivos teste
+app/main/chamadas_test.py
