--- a/pytest.ini
+++ b/pytest.ini
@@ -1,2 +1,13 @@
 [pytest]
+testpaths = tests
 pythonpath = .
+addopts =
+  -ra
+  --strict-markers
+  --maxfail=1
+  --cov=app
+  --cov-report=term-missing
+  --cov-report=xml:tests/coverage/coverage.xml
+  --cov-fail-under=80
+filterwarnings =
+  ignore::DeprecationWarning
