test: readequação de testes para os critérios de aceitação dos requisitos não funcionais

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,10 +1,13 @@
 [pytest]
 testpaths = tests
 pythonpath = .
+markers =
+    performance: testes da RNF01
+    confiabilidade: testes da RNF05
 addopts =
   -ra
   --strict-markers
-  --maxfail=1
+  --maxfail=2
   --cov=app
   --cov-report=term-missing
   --cov-report=xml:tests/coverage/coverage.xml
